src/test/ui/issues/issue-26158.stderr
error[E0005]: refutable pattern in local binding: `&[]` not covered
  --> $DIR/issue-26158.rs:5:9
   |
LL |     let &[[ref _a, ref _b..]..] = x;
   |         ^^^^^^^^^^^^^^^^^^^^^^^ pattern `&[]` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
